# nano-sat-controller

./: CMakeLists.txt  CppProperties.json  LICENSE  README.md  config.h.in
include/: NanoSat.hpp  config.h
include/ctrl/: ControlAndFilter.hpp  Controller.hpp
include/devices/: Accelerometer.hpp  AlignmentSensor.hpp  CurrentSensor.hpp  Device.hpp  DeviceI2C.hpp  FeedbackCoil.hpp  Gyroscope.hpp  IMU10DOF.hpp  Interfaces.hpp  Magnetometer.hpp  MotorActuator.hpp  PowerBoard.hpp  PressureSensor.hpp  TemperatureSensor.hpp
include/self_test/: SelfTest.hpp  TestResult.hpp
include/test/: Calibration.hpp  Mocks.hpp  Test.hpp
include/ui/: IO.hpp  UI.hpp
include/utils/: DataTypes.hpp  Exceptions.hpp  Logger.hpp  Matrix.hpp  OSSignalHandler.hpp  Settings.hpp  UI.hpp  Vector.hpp
resources/: nanosat.json
scripts/: compile.sh  opencv-installer.sh
src/: NanoSat.cpp  main.cpp  simple_main.cpp
src/ctrl/: ControlAndFilter.cpp  Controller.cpp
src/devices/: Accelerometer.cpp  AlignmentSensor.cpp  CurrentSensor.cpp  Device.cpp  DeviceI2C.cpp  FeedbackCoil.cpp  Gyroscope.cpp  IMU10DOF.cpp  Magnetometer.cpp  MotorActuator.cpp  PowerBoard.cpp  PressureSensor.cpp  TemperatureSensor.cpp
src/self_test/: SelfTest.cpp  TestResult.cpp
src/test/: Calibration.cpp  Mocks.cpp  Test.cpp
src/ui/: IO.cpp  UI.cpp
src/utils/: Logger.cpp  Matrix.cpp  OSSignalHandler.cpp  Settings.cpp  UI.cpp
